# mle-repository

./: .gitignore  README.md  env.yml  main.py  nonstandardcode.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_package.yml  build_product.yml  build_script_2.6.yml  build_script_2.7.yml  build_script_2.8.yml  build_test.yml  build_test_package.yml  ci.yml
docs/source/: conf.py  house_package_saachi.rst  index.rst  modules.rst
notebooks/: housing_price_prediction.ipynb
scripts/: ingest_data.py  score.py  train.py
src/house_package_saachi/: config.py  data_ingestion.py  data_preprocessing.py  housing_price.py  main.py  model_scoring.py  model_training.py  utils.py
tests/: test_data_ingestion.py  test_data_preprocessing.py  test_housing_price.py  test_model_scoring.py  test_model_training.py
