[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "Housing Package"
version = "0.1.0"
description = "A brief description of your package"
authors = [
    { name = "Saachi Mohanty", email = "saachi.mohanty@tigeranalytics.com" }
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/saachi-tiger/mle-repository"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
pandas = "*"
scikit-learn = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
housing_price = 'src/house_package_saachi/housing_price.py'
