[tool.poetry]
name = "Housing Package"
version = "0.1.0"
description = "A brief description of your package"
authors = ["Saachi Mohanty <saachi.mohanty@tigeranalytics.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/saachi-tiger/mle-repository"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
pandas = "*"
scikit-learn = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
housing_price = 'src.house_package_saachi.housing_price:main'
