[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "house_package_saachi"
version = "0.0.1"
description = "Predicts the price of house based on the features"
authors = [
    {name = "Saachi Mohanty", email = "saachi.mohanty@tigeranalytics.com"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "flake8", "black", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]